--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "marked": "^4.1.1",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.0",
+    "husky": "^8.0.0",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.1.8",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.1.8"
   }
 }
