--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.7",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.0",
     "husky": "^8.0.0",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.4"
   }
 }
