--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "node scripts/generate-sitemap.mjs",
     "start": "next start",
     "lint": "next lint",
     "cache-posts": "node scripts/cache.js",
@@ -27,8 +28,10 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.0",
+    "globby": "^13.1.2",
     "husky": "^8.0.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4"
   }
